--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Логин"
+        android:hint="@string/username_text_ru"
         android:inputType="text"
         android:padding="12dp" />
 
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="Пароль"
+        android:hint="@string/password_text_ru"
         android:inputType="textPassword"
         android:padding="12dp" />
 
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Войти"
+        android:text="@string/login_text_ru"
         android:textColor="@android:color/white" />
 
 
